--- a/static/index.html
+++ b/static/index.html
@@ -13,12 +13,13 @@
 <div id="sidebar" class="collapsed" data-chosen="">
   <ul id="buttons">
     <!-- https://fonts.google.com/icons?selected=Material+Symbols+Outlined:info:FILL@0;wght@400;GRAD@0;opsz@48&icon.query=info -->
-    <li class="material-symbols-outlined">query_stats</li>
-    <li class="material-symbols-outlined">tune</li>
-    <li class="material-symbols-outlined">info</li>
+    <li class="material-symbols-outlined" title="Filters &amp; Groups">query_stats</li>
+    <!-- <li class="material-symbols-outlined" title="Settings">tune</li> -->
+    <!-- <li class="material-symbols-outlined" title="Favorites">star</li> -->
+    <li class="material-symbols-outlined" title="About">info</li>
   </ul>
   <div id="s_query_stats">
-    <h1>Filter &amp; Group</h1>
+    <h1>Filters &amp; Groups</h1>
     <form id="filter_form">
       <div id="field"></div>
 
@@ -36,39 +37,16 @@
     <h1>Active Filters &amp; Groups</h1>
     <ul id="active_filters"></ul>
   </div>
-  <div id="s_tune">
-    <h1>Blah blah</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra est non semper hendrerit. Sed finibus augue id condimentum tristique. Aliquam commodo, quam at laoreet semper, lectus quam lobortis arcu, vel vulputate urna nisl vitae enim. Etiam facilisis dolor sodales posuere vehicula. Proin pretium bibendum tellus, nec aliquam urna suscipit non. Integer pretium justo non urna venenatis egestas. Sed eu feugiat ipsum, ac rutrum diam.
-      </p>
-      <p>
-      In accumsan neque odio, a dapibus sapien gravida ut. Aenean gravida ante in purus tincidunt laoreet. Mauris consequat, diam sed dignissim eleifend, odio nunc mattis erat, quis euismod sem mauris id urna. Phasellus commodo dui mauris, eget molestie tellus luctus vel. Duis vulputate neque nec risus lobortis placerat. Phasellus vulputate at mi eu auctor. Praesent erat est, luctus sed diam eu, lobortis pharetra mauris. In scelerisque mollis felis eget rutrum. Morbi sit amet vulputate mauris, quis semper tortor. Suspendisse sagittis elit eget mollis porttitor. Nulla at libero velit. Proin eu dolor porta, egestas massa in, consectetur libero.
-      </p>
-      <p>
-      Integer mollis nec nibh eget suscipit. Quisque ornare nisi elit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ac hendrerit leo. Integer nec est nec nibh feugiat lobortis sed in ligula. Pellentesque non mauris vitae ex consequat fermentum at vitae erat. Praesent scelerisque scelerisque massa id viverra. Pellentesque et enim dapibus, venenatis leo eget, aliquam magna. Curabitur a elit sollicitudin, tempus neque vitae, semper lacus. Morbi id sapien condimentum massa laoreet convallis in eu nisi.
-      </p>
-      <p>
-      Donec elementum urna vitae efficitur hendrerit. Suspendisse venenatis nisi in dui ultrices egestas. Proin nec ex eget urna mollis commodo. Sed vel viverra nisl. Vivamus quis fringilla erat. Etiam bibendum nec mi in facilisis. Aliquam aliquam arcu sit amet blandit porttitor. Donec dignissim congue ipsum.
-      </p>
-      <p>
-      Praesent turpis turpis, dictum vitae tortor quis, vestibulum blandit nisi. Cras libero eros, fringilla ut interdum sed, commodo euismod nunc. In sed rhoncus leo. Fusce volutpat eros non faucibus egestas. Etiam et congue justo, vel porttitor dolor. Donec aliquam, urna id fermentum rutrum, nulla magna congue arcu, eget auctor lorem sem sed diam. Suspendisse eu gravida velit. Donec a luctus erat. Morbi in aliquam purus. Fusce gravida velit id risus ullamcorper vehicula. Donec eleifend diam ultrices enim fringilla, nec pharetra tellus congue. Sed at nibh ipsum. Nam facilisis diam vestibulum velit imperdiet cursus.
-      </p>
-      <p>
-      Proin nec lacinia ante. Sed luctus sodales ipsum nec dignissim. Mauris at metus in est tincidunt congue. Ut non lacus est. Vivamus sed purus vel mi maximus mollis. Aenean rutrum commodo purus et consequat. Mauris elit mi, ultricies eget libero finibus, dictum elementum nunc.
-      </p>
-      <p>
-      Mauris vel elit elementum, eleifend nulla sed, dictum justo. Cras tempus ante ac rhoncus tempor. Duis auctor ipsum sit amet ex facilisis lobortis eget laoreet lorem. Etiam vehicula nec magna sit amet aliquet. Suspendisse sit amet maximus tortor. Mauris placerat tortor vitae suscipit finibus. Proin velit nulla, egestas eget justo sit amet, finibus efficitur lorem. In est ex, rutrum vel euismod sit amet, rutrum eu neque. In hac habitasse platea dictumst. Nunc eu purus lectus.
-      </p>
-      <p>
-      Phasellus ac ligula consectetur, vehicula elit at, consectetur nunc. In porta pharetra ante at porta. Duis convallis erat lectus. Aenean tempor placerat augue, vitae tincidunt mauris. Nunc vel magna at mi molestie accumsan non ut ligula. Pellentesque euismod nisi ut ante laoreet dignissim. Integer in eros in ipsum feugiat placerat ac eget sapien. Nunc a rhoncus dui. Ut ac aliquam tellus. Aenean gravida ipsum ac egestas blandit. Donec lacinia eleifend laoreet.
-      </p>
-      <p>
-      Aliquam vel ultrices velit, et dignissim purus. Nullam rutrum tortor sit amet rutrum pharetra. Nam a imperdiet dolor, vel commodo magna. Fusce accumsan volutpat nulla, quis accumsan mauris interdum eu. Nulla facilisi. Nunc a nisi sapien. Integer dolor ex, elementum sit amet elementum ut, aliquam a leo. Nam porttitor lorem vel metus iaculis dignissim. Mauris porttitor felis ornare magna porta, id gravida felis vestibulum.
-      </p>      
-  </div>
+  <!-- <div id="s_tune">
+    <h1>Settings</h1>
+  </div> -->
+  <!-- <div id="s_star">
+    <h1>Favorites</h1>
+    <p>Coming soon</p>
+  </div> -->
   <div id="s_info">
     <h1>About</h1>
-    <p>TODO: Put something smart here...</p>
+    <p>MoniLite: A lightweight monitoring server for quick debugging.</p>
     <h1>Credits</h1>
     <ul>
       <li><a href='https://github.com/alphagov/accessible-autocomplete'>alphagov/accessible-autocomplete</a></li>
