Add Download button

--- a/static/index.html
+++ b/static/index.html
@@ -11,11 +11,14 @@
 </div>
 
 <div id="sidebar" class="collapsed" data-chosen="">
-  <ul id="buttons">
-    <!-- https://fonts.google.com/icons?selected=Material+Symbols+Outlined:info:FILL@0;wght@400;GRAD@0;opsz@48&icon.query=info -->
+  <ul class="buttons">
+    <!-- https://fonts.google.com/icons -->
     <li class="material-symbols-outlined" title="Filters &amp; Groups">query_stats</li>
     <!-- <li class="material-symbols-outlined" title="Settings">tune</li> -->
     <!-- <li class="material-symbols-outlined" title="Favorites">star</li> -->
+  </ul>
+  <ul class="buttons">
+    <li class="material-symbols-outlined" title="Download (Filtered)" data-callback="download">download</li>
     <li class="material-symbols-outlined" title="About">info</li>
   </ul>
   <div id="s_query_stats">
@@ -44,6 +47,10 @@
     <h1>Favorites</h1>
     <p>Coming soon</p>
   </div> -->
+  <div id="s_download">
+    <h1>Favorites</h1>
+    <p>Coming soon</p>
+  </div>
   <div id="s_info">
     <h1>About</h1>
     <p>MoniLite: A lightweight monitoring server for quick debugging.</p>
