--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,14 @@
   </head>
 </html>
 
+<div id="header">
+  <h1>MoniLite</h1>
+  <div>
+    <span id="pps">0.0 Pps</span>
+    <span id="bps">0.0 Bps</span>
+  </div>
+</div>
+
 <div style="height: 50%; width: 100%;">
   <canvas id="chart" style="width: 100%"></canvas>
 </div>
@@ -14,32 +22,54 @@
   <ul class="buttons">
     <!-- https://fonts.google.com/icons -->
     <li class="material-symbols-outlined" title="Filters &amp; Groups">query_stats</li>
+    <li class="material-symbols-outlined" title="Tabular Data">table_view</li>
+    <li class="material-symbols-outlined" title="Download (Filtered)" data-callback="download">download</li>
     <!-- <li class="material-symbols-outlined" title="Settings">tune</li> -->
     <!-- <li class="material-symbols-outlined" title="Favorites">star</li> -->
   </ul>
   <ul class="buttons">
-    <li class="material-symbols-outlined" title="Download (Filtered)" data-callback="download">download</li>
     <li class="material-symbols-outlined" title="About">info</li>
   </ul>
   <div id="s_query_stats">
     <h1>Filters &amp; Groups</h1>
     <form id="filter_form">
-      <div id="field"></div>
+      <div id="field_wrapper">
+        <div id="field_placeholder"></div>
+      </div>
 
       <div id="filterOptions">
-        <div id="filterWithValue">
-          <div>
-            <select id="filter"></select>
-            <input type="text" id="value" placeholder="Value" />
-          </div>
-          <input type="submit" value="Filter" />
-        </div>
-        <div id="filterWithoutValue"></div>
+        <select id="filter"></select>
+        <input type="text" id="value" placeholder="Value" />
+        <button name="btn" value="Filter" title="Filter">
+          <span class="material-symbols-outlined">filter_alt</span>
+        </button>
+        <span>OR</span>
+        <button name="btn" value="Group By" title="Group By">
+          <span class="material-symbols-outlined">group_work</span>
+        </button>
       </div>
     </form>
     <h1>Active Filters &amp; Groups</h1>
     <ul id="active_filters"></ul>
   </div>
+
+  <div id="s_table_view">
+    <h1>Tabular Data</h1>
+    <div class="row">
+      <div>
+        Raw Packet Limit: <select id="table_cnt">
+          <option value="10">10 Rows</option>
+          <option value="100">100 Rows</option>
+          <option value="0">All Data</option>
+        </select>
+      </div>
+      <div>
+        <button id="table_load"><span class="material-symbols-outlined">refresh</span></button>
+      </div>
+    </div>
+    <table id="table_table"></table>
+  </div>
+
   <!-- <div id="s_tune">
     <h1>Settings</h1>
   </div> -->
@@ -53,7 +83,7 @@
   </div>
   <div id="s_info">
     <h1>About</h1>
-    <p>MoniLite: A lightweight monitoring server for quick debugging.</p>
+    <p><a href="https://github.com/stevarino/monilite">MoniLite</a>: A lightweight monitoring server for quick debugging.</p>
     <h1>Credits</h1>
     <ul>
       <li><a href='https://github.com/alphagov/accessible-autocomplete'>alphagov/accessible-autocomplete</a></li>
@@ -66,6 +96,16 @@
   <div id='tooltip_content'></div>
 </div>
 
+<dialog id="modal">
+  <div>
+    <div>
+      <h1>Details</h1>
+      <button class="copy"><span class="material-symbols-outlined">content_copy</span></button>
+      <button class="close"><span class="material-symbols-outlined">close</span></button>
+    </div>
+    <pre></pre>
+  </div>
+</dialog>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
