Serverless demo feature

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 </html>
 
 <div id="header">
-  <h1>MoniLite</h1>
+  <h1>&nbsp;</h1>
   <div>
     <span id="pps">0.0 Pps</span>
     <span id="bps">0.0 Bps</span>
@@ -79,8 +79,9 @@
     <p>Coming soon</p>
   </div>
   <div id="infoPanel">
-    <h1>About</h1>
-    <p><a href="https://github.com/stevarino/monilite">MoniLite</a>: A lightweight monitoring server for quick debugging.</p>
+    <div id="customInfo"></div>
+    <h1>About Squiggly Lines</h1>
+    <p><a href="https://github.com/stevarino/squiggly-lines">Squiggly Lines</a>: A lightweight monitoring server for quick debugging.</p>
     <h1>Credits</h1>
     <ul>
       <li><a href='https://github.com/alphagov/accessible-autocomplete'>alphagov/accessible-autocomplete</a></li>
