--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>MoniLite</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 </html>
 
@@ -109,5 +109,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
-<script src="/accessible-autocomplete/accessible-autocomplete.min.js"></script>
-<script src="/bundle.js"></script>
+<script src="accessible-autocomplete/accessible-autocomplete.min.js"></script>
+<script src="bundle.js"></script>
