--- a/static/index.html
+++ b/static/index.html
@@ -9,8 +9,8 @@
 <div id="header">
   <h1>&nbsp;</h1>
   <div>
-    <span id="pps">0.0 Pps</span>
-    <span id="bps">0.0 Bps</span>
+    <span id="pps" title="Packets per second">0.0 Pps</span>
+    <span id="bps" title="Approximate bytes per second">0.0 Bps</span>
   </div>
 </div>
 
