--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
   </head>
 </html>
 
+<div id="viewport">
 <div id="header">
   <h1>&nbsp;</h1>
   <div>
@@ -14,10 +15,10 @@
   </div>
 </div>
 
-<div style="height: 50%; width: 100%;">
+<div id="chartContianer">
   <canvas id="chart" style="width: 100%"></canvas>
 </div>
-
+</div>
 <div id="sidebar" class="collapsed" data-chosen="">
   <ul class="buttons">
     <!-- https://fonts.google.com/icons -->
@@ -111,6 +112,8 @@
     <pre></pre>
   </div>
 </dialog>
+
+<div id="filterDropdown"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
