--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,9 @@
 <html>
-  <head>
-    <title>Loading...</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-</html>
-
+<head>
+  <title>Loading...</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 <div id="viewport">
 <div id="header">
   <h1>&nbsp;</h1>
@@ -28,12 +26,15 @@
     <li class="material-symbols-outlined" title="Favorites" data-panel="favoritesPanel">star</li>
     <li class="material-symbols-outlined" title="Download (Filtered)" data-callback="download">download</li>
   </ul>
+
   <ul class="buttons">
     <li class="material-symbols-outlined" title="About" data-panel="infoPanel">info</li>
   </ul>
+
   <span class="tab_buttons buttons">
     <button class="material-symbols-outlined close_panel" title="Hide Panel" data-callback='hideSidebar'>close</button>
   </span>
+
   <div id="filterPanel">
     <h1>Filters &amp; Groups</h1>
     <form id="filter_form">
@@ -77,16 +78,19 @@
   <!-- <div id="settingsPanel">
     <h1>Settings</h1>
   </div> -->
+
   <div id="favoritesPanel">
     <h1>Favorites</h1>
     <div id="favorites"></div>
   </div>
+
   <div id="infoPanel">
     <div id="customInfo"></div>
     <h1>About Squiggly Lines</h1>
     <p><a href="https://github.com/stevarino/squiggly-lines">Squiggly Lines</a>: A lightweight monitoring server for quick debugging.</p>
-    <h1>Credits</h1>
+    <h1 id="credits">Credits</h1>
     <ul>
+      <li><a href='https://github.com/chartjs'>Chart.js</a></li>
       <li><a href='https://github.com/alphagov/accessible-autocomplete'>alphagov/accessible-autocomplete</a></li>
       <li><a href='https://fonts.google.com/icons?icon.style=Outlined'>Google Material Symbols</a></li>
     </ul>
@@ -110,9 +114,6 @@
 
 <div id="filterDropdown"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
-
 <script src="accessible-autocomplete/accessible-autocomplete.min.js"></script>
 <script src="bundle.js"></script>
+</body></html>
