--- a/static/index.html
+++ b/static/index.html
@@ -115,5 +115,5 @@
 <div id="filterDropdown"></div>
 
 <script src="accessible-autocomplete/accessible-autocomplete.min.js"></script>
-<script src="bundle.js"></script>
+<script src="page.bundle.js"></script>
 </body></html>
