Improve packet filter widget, fix filter edgecase

--- a/static/index.html
+++ b/static/index.html
@@ -109,6 +109,7 @@
       <button class="material-symbols-outlined" title="Close Popup" data-callback="dialogHide">close</button>
     </span>
     <pre></pre>
+    <div id="copyText" style="display: none"></div>
   </div>
 </dialog>
 
