Correct packet dialog rendering/format

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -108,8 +108,8 @@
       <button class="material-symbols-outlined" title="Copy" data-callback="dialogCopy">&#xe14d; <!-- content_copy --></button>
       <button class="material-symbols-outlined" title="Close Popup" data-callback="dialogHide">&#xe5cd; <!-- close --></button>
     </span>
-    <pre></pre>
-    <div id="copyText" style="display: none"></div>
+    <pre id="packetText"></pre>
+    <pre id="copyText"></div>
   </div>
 </dialog>
 
